--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "start:dev": "npm start -- -o",
+    "deploy": "ng build && firebase deploy --only hosting",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
